syntax = "proto3";

option csharp_namespace = "gRPCTestings";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package orderItem;

service OrderItemProto{
	rpc GetItem(GetItemRequest) returns (ItemResponse);
}

message GetItemRequest{
	string OrderId = 1;
	string ProductId = 2;
}

message ItemResponse{
	string OrderId = 1;
	string ProductId = 2;
	int32 Quantity = 3;
}